--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 }
 .container {
-  background-color: lightpink;
+  background-color: pink;
   width: 80%
   height=auto;margin-left: auto;
   margin-right: auto;
@@ -12,8 +12,10 @@ body {
   padding-right: 25px;
 }
 .jumbotron {
-  float: left;
-  color: pink;
+  float: center;
+  color: lightpink;
   padding-bottom: 25px;
-  
+  padding-top: 25px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
