--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,17 @@
 body {
   background-image: url(https://cdn.shopify.com/s/files/1/0933/1330/products/Pig_Dice_1024x1024.JPG?v=1438377592);
   background-size: 40%, 40%;
-
 }
+
 .container {
   background-color: pink;
-  width: 80%
-  height=auto;margin-left: auto;
+  width: 80% height=auto;
+  margin-left: auto;
   margin-right: auto;
   padding-left: 25px;
   padding-right: 25px;
 }
+
 .jumbotron {
   float: center;
   color: lightpink;
